# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

# The location of the build configuration file.
buildconfig = "//build/BUILDCONFIG.gn"

# Force use of Python 3
script_executable = "python3"
