# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

# The root of the build redirects to a project build file so each project can
# select the artifacts it needs to build.

# The root of the build.
group("root") {
  deps = [ "//project/${project}:root" ]
}

# The root of the build for test artifacts.
group("test_root") {
  testonly = true

  deps = [ "//project/${project}:test_root" ]
}

group("default") {
  testonly = true
  deps = [
    ":root",
    ":test_root",
  ]
}
