# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/toolchain/platform.gni")

source_set("common") {
  sources = [ "common.c" ]
}

source_set("linux") {
  sources = [ "linux.c" ]
  deps = [
    ":common",
    "//src/arch/${plat_arch}/boot_flow:linux",
  ]
}

source_set("spmc") {
  sources = [ "spmc.c" ]
  deps = [
    ":common",
    "//src/arch/${plat_arch}/boot_flow:linux",
  ]
}
