# Copyright 2025 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/toolchain/platform.gni")

source_set("memory_alloc") {
  public_configs = [ "//src/arch/${plat_arch}:arch_config" ]
  sources = [ "memory_alloc.c" ]
}
