# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("arch") {
  testonly = true

  deps = [
    ":arch_test",
    "${plat_arch}",
  ]
}

hypervisor("arch_test") {
  testonly = true

  sources = [
    "dlog_test.c",
    "mm_test.c",
  ]

  deps = [
    "//src/arch/${plat_arch}:arch",
    "//test/hftest:hftest_hypervisor",
  ]
}
