# Copyright 2020 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

declare_args() {
  hftest_ctrl = ":ctrl_fdt"
  hftest_device = ":device_psci"
  hftest_manifest_overlay = ""

  # If set to true, will strip non-critical code, such as verbose failure
  # logging.
  hftest_optimize_for_size = false
}
