# Copyright 2020 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")


vm_kernel("secure_world_sp") {
  testonly = true

  sources = [
    "bare_metal_vm.c",
  ]

  deps = [
    "//test/hftest:hftest_primary_vm",
  ]
}

initrd("secure_world_baremetal") {
  testonly = true

  manifest = "manifest.dts"
  primary_name = "vmlinuz"
  primary_vm = ":secure_world_sp"
}
