# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("vmapi") {
  testonly = true

  deps = [
    "arch/${plat_arch}:arch",
    "common:common",
    "primary_only:primary_only_test",
    "primary_only_ffa:primary_only_ffa_test",
    "primary_with_secondaries:primary_with_secondaries_no_fdt",
    "primary_with_secondaries:primary_with_secondaries_test",
  ]
}
