# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

group("partitions") {
  testonly = true
  deps = [
    "arch/${plat_arch}:arch",
    "common:ffa",
    "ffa_both_worlds_el3_spmc:ffa_both_world_partitions_test",
    "ffa_secure_partition_el3_spmc:ffa_secure_partition_only_test",
    "ffa_secure_partition_only:ffa_secure_partition_only_test",
    "ffa_secure_partitions:ffa_both_world_partitions_boot_fail_test_sp1",
    "ffa_secure_partitions:ffa_both_world_partitions_boot_fail_test_sp2",
    "ffa_secure_partitions:ffa_both_world_partitions_boot_fail_test_sp3",
    "ffa_secure_partitions:ffa_both_world_partitions_sel1_up_test",
    "ffa_secure_partitions:ffa_both_world_partitions_test",
    "ffa_secure_partitions:ffa_both_world_partitions_vhe_test",
    "primary_with_secondaries:primary_with_sp",
    "primary_with_secondaries:primary_with_sp_vhe",
  ]
}

group("vmapi") {
  testonly = true

  deps = [
    "arch/${plat_arch}:arch",
    "common:ffa",
    "primary_only:primary_only_test",
    "primary_only_ffa:primary_only_ffa_test",
    "primary_with_secondaries:primary_with_secondaries_el0_test",
    "primary_with_secondaries:primary_with_secondaries_no_fdt",
    "primary_with_secondaries:primary_with_secondaries_test",
  ]
}
