# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/toolchain/platform.gni")

source_set("call") {
  sources = [ "hvc_call.c" ]
}

source_set("svc_call") {
  sources = [ "svc_call.c" ]
}

source_set("smc_call") {
  sources = [ "smc_call.c" ]
}
