# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

declare_args() {
  # PSCI hooks to be used for the platform, specified as build target.
  plat_psci = "//src/arch/aarch64/plat/psci:absent"

  # SMC hooks to be used for the platform, specified as build target.
  plat_smc = "//src/arch/aarch64/plat/smc:absent"

  secure_world = "0"
}
