# Copyright 2019 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

declare_args() {
  # FF-A hooks to be used for the platform, specified as build target.
  plat_ffa = "//src/arch/aarch64/plat/ffa:absent"

  # PSCI hooks to be used for the platform, specified as build target.
  plat_psci = "//src/arch/aarch64/plat/psci:hypervisor"

  # SMC hooks to be used for the platform, specified as build target.
  plat_smc = "//src/arch/aarch64/plat/smc:absent"

  plat_interrupts = "//src/arch/aarch64/plat/interrupts:absent"

  # Pseudo random numbers source. Used for pointer authentication, MTE, and stack protector.
  plat_prng = "//src/arch/aarch64/plat/prng:prng_fake"

  secure_world = "0"

  enable_mte = "0"
}
