# Copyright 2018 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

config("arch_config") {
}

source_set("arch") {
  sources = [
    "cache.c",
    "mm.c",
    "timer.c",
  ]
}

# Empty implementation of platform boot flow.
# Fake arch targets should not depend on the boot flow functions. Will fail to
# compile if they do.
source_set("boot_flow") {
}

# Fake implementation of putchar logs to the console.
source_set("console") {
  sources = [ "console.c" ]
}

# Empty, as the functions are provided by libc already.
source_set("std") {
}
