# Copyright 2021 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

import("//build/image/image.gni")
import("//test/hftest/args.gni")

config("config") {
  include_dirs = [ "inc" ]
}

vm_kernel("el0_partition_test_vm") {
  testonly = true
  public_configs = [
    ":config",
    "//src/arch/aarch64:config",
  ]

  sources = [
    "boot.c",
  ]

  deps = [
    "//src/arch/aarch64/hftest:registers",
    "//test/hftest:hftest_primary_vm",
    "//test/vmapi/common",
    "//vmlib",
  ]
}

manifest("el0_partition_test_manifest") {
  source = "manifest.dts"
  output = "manifest.dtb"
  overlay = hftest_manifest_overlay
}

device_tree("secondary_dtb") {
  source = "secondary.dts"
  output = "$target_out_dir/secondary.dtb"
}

initrd("el0_partitions_test") {
  testonly = true

  files = [
    [
      "manifest.dtb",
      ":el0_partition_test_manifest",
      "manifest.dtb",
    ],
    [
      "el0_partition_test",
      ":el0_partition_test_vm",
      "el0_partition_test_vm.bin",
    ],
    [
      "services1",
      "services:service_vm1",
      "service_vm1.bin",
    ],
    [
      "secondary.dtb",
      ":secondary_dtb",
      "secondary.dtb",
    ],
  ]
}
